--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.4+10
+  cloud_firestore: ^3.1.8
+  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.7
+  firebase_storage: ^10.2.7
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
