--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.7
   firebase_storage: ^10.2.7
+  path_provider: ^2.0.9
+  http: ^0.13.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
